fix: resolve mobile nav menu background shift while scrolling in mobile browsers

--- a/app/_components/nav/mobile-nav.module.css
+++ b/app/_components/nav/mobile-nav.module.css
@@ -92,7 +92,7 @@
 /* START - Mobile nav menu styles */
 
 .navMenuContainer {
-  @apply hidden translate-x-64 shadow-none;
+  @apply hidden translate-x-64;
 
   transition-property: transform, overlay, display;
   transition-behavior: allow-discrete;
@@ -102,7 +102,6 @@
 
 .navMenuContainer[open] {
   @apply flex translate-x-0;
-  box-shadow: -10px 0px 16px rgb(0 0 0 / 0.1);
 }
 
 @starting-style {
@@ -112,7 +111,7 @@
 }
 
 .navMenuContainer::backdrop {
-  @apply bg-black opacity-0;
+  @apply h-screen bg-black opacity-0;
 
   transition-property: opacity, overlay, display;
   transition-behavior: allow-discrete;
@@ -128,6 +127,10 @@
   .navMenuContainer[open]::backdrop {
     @apply opacity-0;
   }
+}
+
+.hiddenBackgroundShadow {
+  box-shadow: -10px 0px 16px rgb(0 0 0 / 0.1);
 }
 
 .arrowTransition {
